[package]
name = "splik"
authors = ["Violet"]
description = "Simple programming language identifier kit."
license = "MIT"
version = "0.2.5"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
